chore: 🤖 swagger.responses 加入 headers 設定
