# routes/users.js
@@ -30,14 +30,16 @@ router.post(
         "message": "註冊成功",
         "token": "eyJhbGciOiJSUzI1NiIsImtpZCI6InRCME0yQSJ9....",
         "expired": 1630734430297
+      },
+      headers: {
+        'Content-Type': {
+          description: 'The content type',
+          type: 'string'
+        }
       }
     }
    * #swagger.responses[400] = {
       description: 'Bad Request'
-    }
-   * #swagger.headers['Content-Type'] = {
-      description: 'The content type',
-      type: 'string'
     }
    */
 );
@@ -64,14 +66,16 @@ router.post(
         "message": "登入成功",
         "token": "eyJhbGciOiJSUzI1NiIsImtpZCI6InRCME0yQSJ9....",
         "expired": 1630734430297
+      },
+      headers: {
+        'Content-Type': {
+          description: 'The content type',
+          type: 'string'
+        }
       }
     }
    * #swagger.responses[400] = {
       description: 'Bad Request'
-    }
-   * #swagger.headers['Content-Type'] = {
-      description: 'The content type',
-      type: 'string'
     }
    */
 );
@@ -92,10 +96,6 @@ router.post(
         "status": true,
         "message": "登出成功"
       }
-    }
-   * #swagger.headers['Content-Type'] = {
-      description: 'The content type',
-      type: 'string'
     }
    */
 );
@@ -140,10 +140,6 @@ router.get(
         }
       }
     }
-   * #swagger.headers['Content-Type'] = {
-      description: 'The content type',
-      type: 'string'
-    }
    */
 );
 
@@ -177,10 +173,6 @@ router.patch(
     }
    * #swagger.responses[400] = {
       description: 'Bad Request'
-    }
-   * #swagger.headers['Content-Type'] = {
-      description: 'The content type',
-      type: 'string'
     }
    */
 );
@@ -238,10 +230,6 @@ router.put(
    * #swagger.responses[400] = {
       description: 'Bad Request'
     }
-   * #swagger.headers['Content-Type'] = {
-      description: 'The content type',
-      type: 'string'
-    }
    */
 );
 
@@ -289,10 +277,6 @@ router.get(
         ]
       }
     }
-   * #swagger.headers['Content-Type'] = {
-      description: 'The content type',
-      type: 'string'
-    }
    */
 );
 
@@ -319,10 +303,6 @@ router.delete(
         "status": false,
         "message": "查無此貼文 id"
       }
-    }
-   * #swagger.headers['Content-Type'] = {
-      description: 'The content type',
-      type: 'string'
     }
    */
 );
@@ -359,10 +339,6 @@ router.get(
         "message": "查無用戶追蹤名單"
       }
     }
-   * #swagger.headers['Content-Type'] = {
-      description: 'The content type',
-      type: 'string'
-    }
    */
 );
 
@@ -390,10 +366,6 @@ router.post(
         "message": "您無法追蹤自己"
       }
     }
-   * #swagger.headers['Content-Type'] = {
-      description: 'The content type',
-      type: 'string'
-    }
    */
 );
 
@@ -420,10 +392,6 @@ router.delete(
         "status": false,
         "message": "您無法取消追蹤自己"
       }
-    }
-   * #swagger.headers['Content-Type'] = {
-      description: 'The content type',
-      type: 'string'
     }
    */
 );
